# urban_2024

./: .envrc  .gitignore  Pract_06_17.ipynb  Pract_06_18.ipynb  flake.nix  pyproject.toml
data/ptz/: railways.geojson  roads.geojson  territory_ptz.geojson
data/spb/: railways.geojson  territory.geojson  water.geojson
urban/: util.py
