[tool.poetry]
name = "urban-2024"
version = "0.1.0"
description = ""
authors = ["Danil Doroshin <ddddanil5555@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
blocksnet = {git = "https://github.com/iduprojects/blocksnet"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ipython = "^8.25.0"
ipykernel = "^6.29.4"
cython = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
